@@ -6,7 +6,7 @@ ENV_CROSS_COMPILE:=$(CROSS_COMPILE)
 VERSION = 1
 PATCHLEVEL = 2
 SUBLEVEL = 11
-#EXTRAVERSION = -rc3
+#EXTRAVERSION = -b2
 #NAME=Zonked Quokka
 
 # *DOCUMENTATION*
